--- a/agent.html
+++ b/agent.html
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <a href="agent.html" class="nav-item nav-link active">Agent</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                         <!-- <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="project.html" class="nav-item nav-link">Project</a>
                         <div class="nav-item dropdown">
