--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <a href="disewakan.html" class="dropdown-item">Disewakan</a>
                             </div>
                         </div>
-                        <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Type</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="type.html" class="dropdown-item">Rumah</a>
@@ -111,7 +111,7 @@
                                 <a href="#" class="dropdown-item">Bali</a>
                                 <a href="#" class="dropdown-item">Lain-lain</a>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">KPR</a>
                             <div class="dropdown-menu rounded-0 m-0">
