--- a/kpr_syariah.html
+++ b/kpr_syariah.html
@@ -82,7 +82,7 @@
                                 <a href="disewakan.html" class="dropdown-item">Disewakan</a>
                             </div>
                         </div>
-                        <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Type</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="type.html" class="dropdown-item">Rumah</a>
@@ -106,7 +106,7 @@
                                 <a href="#" class="dropdown-item">Bali</a>
                                 <a href="#" class="dropdown-item">Lain-lain</a>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">KPR</a>
                             <div class="dropdown-menu rounded-0 m-0">
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <a href="agent.html" class="nav-item nav-link">Agent</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                         <!-- <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="project.html" class="nav-item nav-link">Project</a>
                         <div class="nav-item dropdown">
